# larva

./: .gitignore  .pre-commit-config.yaml  ADR-001-spec-version-boundary.md  ADR-002-capability-intent-without-runtime-policy.md  ADR-003-canonical-requiredness-authority.md  ARCHITECTURE.md  INTERFACES.md  INVAR.md  MIGRATION-002-capability-intent.md  README.md  USAGE.md  USER_GUIDE.md  guard-diagnosis.md  meta-review-gate-audit  owner-authorization-dead-export-cli-main.md  plan.yaml  pyproject.toml
.agents/: claude.settings.json  instructions.md  mcp.json
.agents/skills/review/: SKILL.md
.github/workflows/: ci.yml
artifacts/: larva-legacy-field-rejections.jsonl
contracts/: errors.yaml  persona_spec.schema.json
contrib/opencode-plugin/: README.md  larva.ts
contrib/pi-extension/: README.md  larva.ts  package-lock.json  package.json  prove-tool-policy-migration.mjs  test-agent-persona-switch-policy-runtime.mjs  test-autocomplete-runtime.mjs  test-compaction-focus-runtime.mjs  test-model-map-runtime.mjs  test-model-map-unit.mjs  test-persona-candidate-hotpath-runtime.mjs  test-persona-refresh-command-runtime.mjs  test-persona-selector-ui.mjs  test-personaspec-fail-closed.mjs  test-subagent-rpc-memory-bound.mjs  test-subagent-sessions-helper.mjs  test-tool-policy-paths.mjs
contrib/web/: index.html  server.py
design/: RFC-transport-http-migration.md  component-error-projection-basis.md  component-kind-alias-policy-basis.md  contract-metadata-single-source-basis.md  hard-cutover-canonical-alignment.md  legacy-personaspec-hard-cut-policy.md  opifex-canonical-authority-basis.md  opifex-frozen-authority-packet.json  pi-agent-persona-self-switch.md  pi-coding-agent-integration.md  pi-model-map-draft-helper.md  prompt-text-opacity-basis.md  registry-local-variants-and-assembly-removal.md
docs/: README.md
docs/adr/: ADR-001-spec-version-boundary.md  ADR-002-capability-intent-without-runtime-policy.md  ADR-003-canonical-requiredness-authority.md  ADR-004-empty-capabilities-and-unrestricted-semantics.md
docs/evidence/: core_normalize.evidence_guard_closure_20260503.md
docs/guides/: USAGE.md  USER_GUIDE.md
docs/reference/: ARCHITECTURE.md  INTERFACES.md  PI_AGENT_PERSONA_SWITCH_POLICY.md  PI_EXTENSION_ASYNC_SUBAGENTS.md  PI_EXTENSION_COMPACTION_FOCUS.md  PI_EXTENSION_PERSONA_INVOCATION.md
docs/security/: 2026-06-27-personaspec-prompt-stored-xss.md
scripts/: intent_closure_gate.py  pi-agent-persona-switch-policy-smoke.mjs  pi-extension-autocomplete-smoke.mjs  pi-extension-runtime-smoke.mjs
scripts/ci/: larva_repo_local_gate.py
src/larva/: __init__.py  cli.py  cli_entrypoint.py  cli_facade.py
src/larva/app/: facade.py  facade_registry_ops.py  facade_strictness.py  facade_types.py  update_batch_where.py
src/larva/core/: _structured_error.py  assemble.py  assembly_error.py  component_error_projection.py  component_kind.py  normalize.py  patch.py  pi_model_map.py  spec.py  validate.py  validation_contract.py  validation_field_shapes.py  validation_warnings.py
src/larva/shell/: cli.py  cli_commands.py  cli_doctor.py  cli_entry_compat.py  cli_error_compat.py  cli_facade_compat.py  cli_failure_compat.py  cli_helpers.py  cli_parser.py  cli_projection.py  cli_runtime.py  cli_types.py  components.py  mcp.py  mcp_contract.py  mcp_export.py  mcp_handler_ops.py  mcp_params.py  mcp_server.py  mcp_update_batch.py  opencode.py  pi.py  pi_model_map_cli.py  python_api.py  python_api_components.py  registry.py  registry_extra_ops.py  registry_fs.py  registry_types.py  web.py  web_routes.py  web_ui.html
test-output/: gate_pi_runtime_liveness_hardening_20260601.md  pi_tab_autocomplete_real_tui_smoke_or_limit.md
test-output/runtime-smoke-proof/: npm-ci.txt  offline-smoke.json  pytest.txt
tests/: __init__.py
tests/app/: test_facade.py
tests/canonical_cutover/: test_hard_cutover_readiness.py
tests/core/: test_assemble.py  test_normalize.py  test_patch.py  test_schema_validation.py  test_spec.py  test_validate.py  test_variants.py
tests/repro/: CONVERGENCE_FINDINGS.md  alias_convergence_verify.py  cross_surface_consistency_verify.py  debug_assemble.py  debug_validation.py  issue_canonical_cutover_liveness.py  issue_web_liveness.py  spec_verify_black_box_surfaces.py  web_convergence_parity.py
tests/shell/: __init__.py  fixture_taxonomy.py  test_canonical_boundary_gaps.py  test_cli.py  test_components.py  test_contrib_web.py  test_intent_closure_gate.py  test_mcp.py  test_mcp_server.py  test_mcp_stdio_integration.py  test_opencode_cli.py  test_opencode_plugin_contract.py  test_pi_agent_persona_switch_policy_contract.py  test_pi_extension_contract.py  test_pi_extension_real_runtime.py  test_pi_extension_subagent_ux.py  test_pi_extension_tool_policy_static.py  test_pi_launcher_contract.py  test_pi_model_map.py  test_pi_model_map_draft_contract.py  test_pi_persona_candidate_cache_contract_expected_red.py  test_pi_postspec_editor_prompt_expected_red.py  test_pi_postspec_subagent_ux_expected_red.py  test_pi_reported_failures_expected_red.py  test_python_api.py  test_registry.py  test_repo_local_ci_gate.py  test_variant_projection_smoke.py  test_variant_runtime_contract_red.py  test_web.py  test_web_rest_gaps.py
(+44 files in other folders)
